...
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true"
        mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintHorizontal_bias="0.974"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:srcCompat="@drawable/ic_hourglass" />

    <com.mapbox.mapboxsdk.maps.MapView
...
        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="52dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#e8be00"
            android:text="@string/menu" />

    </com.mapbox.mapboxsdk.maps.MapView>
...
